Step 4 - reflective access with opens
(cherry picked from commit b9672538ad94613bf8e99ae296bbcc6c05b6a435)

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>main</module>
         <module>math</module>
         <module>utils</module>
+        <module>model</module>
     </modules>
 
     <properties>
