Step 4 - reflective access with opens

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>math</module>
         <module>main</module>
         <module>utils</module>
+        <module>model</module>
     </modules>
 
     <properties>
