--- a/main/pom.xml
+++ b/main/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>model</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
