--- a/main/pom.xml
+++ b/main/pom.xml
@@ -3,20 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>eu.chrost</groupId>
+        <artifactId>modules-hands-on</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>eu.chrost</groupId>
-    <artifactId>modules-hands-on</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>main</module>
-        <module>math</module>
-    </modules>
+    <artifactId>main</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>eu.chrost</groupId>
+            <artifactId>math</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
